tests/paczka1/fuzzy1/67855469.err
Error in line 1: vUX2Ja A817 22,0
Error in line 7: A939 A424 74,2
Error in line 38: FOP3Z A939 72,38
